tests/snapshots/generate_graph__bin__fail__virtual_workspace_single_package_multi_target.snap
---
source: tests/generate_graph.rs
expression: output
---
STDERR:
Error: No binary target found with name "foobar".

Targets present in package:
- package_multi_target (--lib)
- package_multi_target (--bin package_multi_target)


STDOUT:

