tests/snapshots/generate_graph__bin__fail__workspace_multi_package.snap
---
source: tests/generate_graph.rs
expression: output
---
STDERR:
Error: Multiple packages present in workspace,
please explicitly select one via --package flag.

Packages present in workspace:
- package_bin_target
- package_lib_target
- package_multi_target
- workspace_multi_package


STDOUT:

